fixed an issue where on desktop if in case of too many todos, they would overflow the screen - now there's a scrollbar on the todolist if content grows

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ html {
 #main-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100%;
 }
 
 header {
@@ -28,6 +28,7 @@ header {
   flex-direction: column;
   display: flex;
   justify-content: center;
+  background-color: white;
 }
 
 #date-day {
@@ -48,6 +49,7 @@ header {
   flex: 1 0 auto;
   display: flex;
   align-items: flex-start;
+  background-color: white;
 }
 
 #todo-list {
@@ -87,12 +89,13 @@ input[type="checkbox"] {
 }
 
 #todo-add {
+  background-color: white;
   height: 6em;
   flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* dangerous territory */
+  /* be careful with p on mobile */
   padding: 0 2.5em;
 }
 
@@ -107,7 +110,7 @@ input[type="checkbox"] {
   border: none;
   border-bottom: 1px solid black;
   font-size: 23px;
-  color: rgb(48, 48, 48);
+  color: #303030;
   background: transparent;
 }
 
@@ -137,11 +140,19 @@ input[type="checkbox"] {
     background-color: #8bc6ec;
     background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
   }
+
+  #main-content {
+    overflow: auto;
+    flex: 1 1 auto;
+    /* background-color: pink; */
+  }
+
   #main-wrapper {
+    min-height: 90%;
     border-radius: 2em;
-    max-height: 90vh;
     width: 450px;
-    background-color: white;
+    overflow: hidden;
+    margin: 5vh 0 5vh 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 }
